--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "aws-amplify-react": "^3.1.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.4.1",
-    "file-saver": "git+ssh://git@github.com/eligrey/FileSaver.js.git",
+    "file-saver": "git+https://github.com/eligrey/FileSaver.js.git",
     "immer": "^8.0.1",
     "kind-of": "^6.0.3",
     "lodash": "^4.17.19",
